# orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _test_config.py  docker-compose.yml  ingredient_search_mapping.json  logs.txt  orchestration.sql  orchestrator-PR-body.md  pyproject.toml
dashboard/: Dockerfile.dashboard  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/alerts/: page.tsx
dashboard/app/console/: page.tsx
dashboard/app/data-sources/: page.tsx
dashboard/app/dead-letters/: page.tsx
dashboard/app/neo4j/: page.tsx
dashboard/app/pipelines/: page.tsx
dashboard/app/runs/: page.tsx
dashboard/app/runs/[id]/: page.tsx
dashboard/app/triggers/: page.tsx
dashboard/components/: KPICard.tsx  Sidebar.tsx  StatusBadge.tsx  Terminal.tsx
dashboard/lib/: api.ts  supabase.ts
data/: Recipes_data.csv  test_single_recipe.csv  test_single_recipe_2.json  testcsvdata.csv  testjsondata_ar.json  testjsondata_epi.json  testjsondata_fn.json  testjsondata_withimages.json
docs/: COMPLETE_DOCUMENTATION.md  COOLIFY_DEPLOYMENT_GUIDE.md  END_TO_END_PIPELINE_WALKTHROUGH.md  EXTERNAL_TRIGGERS_AND_WEBHOOKS.md  FRAMEWORK_COMPARISON.md  IMPLEMENTATION_PLAN_GAP_CLOSURE.md  ORCHESTRATOR_ARCHITECTURE.md  PIPELINE_METRICS_GUIDE.md  PIPELINE_PACKAGING_STRATEGY.md  SUPABASE_WEBHOOK_SETUP_GUIDE.md  TRIGGERING_WORKFLOW_ANALYSIS.md  TRIGGER_IMPLEMENTATION_GUIDE.md  implementation_plan.md  off_schema_gap_analysis.md  orchestration-ingestion-tracking-changes.md  orchestration_research.md  product_dedup_implementation_strategy.md  walkthrough.md
orchestrator/: __init__.py  __main__.py  alerts.py  api.py  cli.py  config.py  contracts.py  db.py  dlq_worker.py  flows.py  log_buffer.py  log_persister.py  logging_utils.py  models.py  neo4j_adapter.py  parallel.py  pipelines.py  triggers.py
outputs/: raw_products-2d24a247-2944-4773-a9eb-5f0a32a436b1.csv  raw_recipes-1b30d79f-42b4-4d68-a767-251af230abdd.csv  raw_recipes-aa4a4317-1cb4-4a0f-9434-364e01606e30.csv  raw_recipes-cd252012-70fe-4009-bcd8-e4f1e649a5d5.csv
sql/: concurrent_run_guard.sql  data_source_tables.sql  grant_test_schemas.sql  orchestration_schema.sql  seed_data_sources.sql
tests/: conftest.py  e2e_diagnostic.py  test_alerts.py  test_api.py  test_cli.py  test_config.py  test_db.py  test_flows.py  test_models.py  test_neo4j_adapter.py  test_parallel.py  test_pipelines.py  test_triggers.py
