[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
version = "0.1.0"
description = "Production-grade data orchestration tool for medallion architecture pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Orchestration
    "prefect>=3.0",

    # Database
    "supabase>=2.0",

    # Data models
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Environment
    "python-dotenv>=1.0",

    # API server (for webhook endpoints)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",

    # HTTP client (for GitHub Issues alerting)
    "httpx>=0.27",

    # Utilities
    "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# NOTE: [pipelines] extra removed — orchestrator runs pipelines as
# subprocesses and no longer imports their code directly.  Pipeline
# packages are installed separately in the Docker image so that
# `python -m pipeline_module` works.
neo4j = [
    # Gold-to-Neo4j pipeline driver
    "neo4j>=5.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]
